--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -26,8 +26,8 @@ flutter:
 
   uses-material-design: true
 
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/custom_stepper.gif
   #   - images/a_dot_ham.jpeg
 
   # fonts:
