--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: custom_stepper
-description: "A new Flutter package project."
+description: "custome stepper for use simple"
 version: 0.0.1
-homepage:
+homepage: https://github.com/Ramtinmoradi/custom_stepper.git
+repository: https://github.com/Ramtinmoradi/custom_stepper.git
 
 environment:
   sdk: ^3.5.3
