--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: simple_flutter_stepper
-description: "simple flutter stepper for use simple"
-version: 0.0.1+3
+description: "A simple package to make a stepper easily and quickly. Using the simplest methods and better customizations."
+version: 0.0.1+4
 homepage: https://github.com/Ramtinmoradi/simple_flutter_stepper.git
 repository: https://github.com/Ramtinmoradi/simple_flutter_stepper.git
 license: MIT
